plugins {
    id 'java'
    id 'idea'
    id 'jacoco'
    id 'org.springframework.boot' version '3.3.8'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.gorylenko.gradle-git-properties' version '2.4.2'
    id 'org.sonarqube' version '6.0.1.5171'
    id 'com.google.protobuf' version '0.9.4'
}

repositories {
    mavenCentral()
}

version = '1.7.0-SNAPSHOT'
group = 'net.geant.nmaas'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

gitProperties {
    gitPropertiesResourceDir = file("${project.rootDir}/src/main/resources")
    dotGitDirectory = file("${project.rootDir}/.git")
    keys = ['git.branch', 'git.commit.time', 'git.commit.id.abbrev', 'git.build.version']
}

protobuf {
    protoc {
        artifact = 'com.google.protobuf:protoc:3.25.5'
    }
    plugins {
        grpc {
            artifact = 'io.grpc:protoc-gen-grpc-java:1.64.0'
            //path = './protoc-gen-grpc-java.exe'
        }
    }
    generateProtoTasks {
        all()*.plugins {
            grpc {}
        }
    }
}

jar {
    enabled = false
}

base.archivesName = 'nmaas-platform'

springBoot {
    buildInfo()
}

sourceSets {
    integrationTest {
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
}

configurations {
    integrationTestImplementation.extendsFrom implementation
    integrationTestRuntimeOnly.extendsFrom runtimeOnly

    compileOnly {
        extendsFrom annotationProcessor
    }

    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        exclude group: 'ch.qos.logback', module: 'logback-classic'
    }
}

dependencies {

    runtimeOnly 'org.springframework.boot:spring-boot-properties-migrator'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    integrationTestCompileOnly 'org.projectlombok:lombok'
    integrationTestAnnotationProcessor 'org.projectlombok:lombok'

    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation('org.springframework.boot:spring-boot-starter-mail')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation('org.springframework.boot:spring-boot-starter-actuator')
    implementation('org.springframework.boot:spring-boot-devtools')
    implementation('org.springframework.boot:spring-boot-starter-quartz')
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    implementation('org.springdoc:springdoc-openapi-ui:1.8.0')

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-oauth2-jose'
    implementation 'org.springframework.security:spring-security-oauth2-client'

    implementation('org.modelmapper:modelmapper:3.2.2')
    implementation('org.modelmapper.extensions:modelmapper-spring:3.2.2')
    implementation('org.apache.commons:commons-lang3:3.17.0')
    //workaround for grpc using javax (https://github.com/grpc/grpc-java/issues/9179)
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'

    // Database
    runtimeOnly('com.h2database:h2')
    runtimeOnly('org.postgresql:postgresql')
    implementation 'org.hibernate.orm:hibernate-envers:6.5.0.Final'
    implementation('org.flywaydb:flyway-core')

//    implementation('io.jsonwebtoken:jjwt:0.9.1')
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    implementation('org.freemarker:freemarker:2.3.34')
    implementation 'org.gitlab4j:gitlab4j-api:6.0.0-rc.8' // version 6 for jakarta
    implementation('com.vdurmont:semver4j:3.1.0')
    implementation('io.micrometer:micrometer-registry-prometheus:1.11.2')


    implementation 'org.slf4j:slf4j-api:2.0.9'
    runtimeOnly 'org.slf4j:slf4j-simple:2.0.9'

    // SSH library
    implementation('com.hierynomus:sshj:0.32.0')
    implementation('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')

    // Kubernetes API client
    implementation('io.fabric8:kubernetes-client:6.12.1')

    implementation('com.google.protobuf:protobuf-java:3.25.5')
    implementation('io.grpc:grpc-netty-shaded:1.62.2')
    implementation('io.grpc:grpc-protobuf:1.62.2')
    implementation('io.grpc:grpc-stub:1.62.2')

    implementation('com.opencsv:opencsv:5.9')

    testImplementation('org.mockito:mockito-inline:5.2.0')
    testImplementation('org.springframework.boot:spring-boot-starter-test')

    integrationTestImplementation('org.springframework.boot:spring-boot-starter-test')
    integrationTestImplementation('org.springframework.security:spring-security-test')
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    dependsOn(generateGitProperties)
}

test {
    useJUnitPlatform()
    systemProperties 'property': 'value'
    ignoreFailures = true
    afterTest { desc, result ->
        println "Executing test ${desc.name} [${desc.className}] with result: ${result.resultType}"
    }
    jacoco {
        destinationFile = file("$buildDir/jacoco/test.exec")
        excludes = [
                '**/inventory/janitor/**',
                '**/exception/**',
                '**/exceptions/**'
        ]
    }
}

tasks.register('integrationTestOnly', Test) {
    useJUnitPlatform()
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    outputs.upToDateWhen { false }
    afterTest { desc, result ->
        println "Executing itest ${desc.name} [${desc.className}] with result: ${result.resultType}"
    }
    jacoco {
        destinationFile = file("$buildDir/jacoco/integrationTest.exec")
        excludes = [
                '**/inventory/janitor/**',
                '**/exception/**',
                '**/exceptions/**'
        ]
    }
}

tasks.register('integrationTest', Test) {
    useJUnitPlatform()
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    outputs.upToDateWhen { false }
    afterTest { desc, result ->
        println "Executing itest ${desc.name} [${desc.className}] with result: ${result.resultType}"
    }
    jacoco {
        destinationFile = file("$buildDir/jacoco/integrationTest.exec")
        excludes = [
                '**/inventory/janitor/**',
                '**/exception/**',
                '**/exceptions/**'
        ]
    }
    dependsOn(test)
}

jacoco {
    toolVersion = "0.8.8"
    reportsDirectory = layout.buildDirectory.dir('jacoco')
}

jacocoTestReport {
    reports {
        xml.required = true
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
    executionData(test, integrationTest)
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ['**/inventory/janitor/**',])
        }))
    }

}

jacocoTestCoverageVerification {
    executionData(test, integrationTest)
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ['**/inventory/janitor/**',])
        }))
    }
    violationRules {
        rule {
            limit {
                counter = 'INSTRUCTION'
                value = 'COVEREDRATIO'
                minimum = 0.6
            }
        }
        rule {
            element = 'PACKAGE'
            includes = [
                    'net.geant.nmaas.portal.**'
            ]
            excludes = [
                    '**.model*',
                    '**.exceptions**',
                    '**.exception**',
                    'net.geant.nmaas.portal.api.bulk'
            ]
            limit {
                counter = 'INSTRUCTION'
                value = 'COVEREDRATIO'
                minimum = 0.5
            }
        }
        rule {
            element = 'PACKAGE'
            includes = [
                    'net.geant.nmaas.orchestration.**',
                    'net.geant.nmaas.portal.api.bulk'
            ]
            excludes = [
                    '**.model*',
                    '**.exceptions**'
            ]
            limit {
                counter = 'INSTRUCTION'
                value = 'COVEREDRATIO'
                minimum = 0.3
            }
        }
    }
}

integrationTest.finalizedBy(jacocoTestCoverageVerification)
jacocoTestCoverageVerification.finalizedBy(jacocoTestReport)

sonarqube {
    properties {
        property "sonar.coverage.exclusions", ["**/inventory/janitor/**", "**/exception/**", "**/exceptions/**"]
    }
}
